@@ -86,10 +86,12 @@ typedef enum {
     CYGNUM_SERIAL_BAUD_38400,
     CYGNUM_SERIAL_BAUD_57600,
     CYGNUM_SERIAL_BAUD_115200,
-    CYGNUM_SERIAL_BAUD_230400
+    CYGNUM_SERIAL_BAUD_230400,
+    CYGNUM_SERIAL_BAUD_460800,
+    CYGNUM_SERIAL_BAUD_921600
 } cyg_serial_baud_rate_t;
-#define CYGNUM_SERIAL_BAUD_MIN CYGNUM_SERIAL_BAUD_50 
-#define CYGNUM_SERIAL_BAUD_MAX CYGNUM_SERIAL_BAUD_230400
+#define CYGNUM_SERIAL_BAUD_MIN CYGNUM_SERIAL_BAUD_50
+#define CYGNUM_SERIAL_BAUD_MAX CYGNUM_SERIAL_BAUD_921600
 
 // Note: two levels of macro are required to get proper expansion.
 #define _CYG_SERIAL_BAUD_RATE(n) CYGNUM_SERIAL_BAUD_##n
